[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/DynaPuff-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MultiPlayer/lobby/MultiHangar.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/menu1.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Pencil.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/LoadingSheet.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.215686 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[node name="MultiHangar" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1358.0
margin_bottom = 808.0
color = Color( 0, 0.247059, 0.505882, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayGame" type="TouchScreenButton" parent="."]
position = Vector2( 1055, 627 )
normal = ExtResource( 3 )

[node name="NameEdit" type="LineEdit" parent="."]
margin_left = 28.0
margin_top = 455.0
margin_right = 438.0
margin_bottom = 521.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 1
placeholder_text = "NAME"

[node name="Pencil" type="Sprite" parent="."]
position = Vector2( 464, 487 )
rotation = 0.301784
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="wait" type="Node2D" parent="."]
visible = false

[node name="BlackScreen" type="ColorRect" parent="wait"]
margin_right = 1350.0
margin_bottom = 767.0
color = Color( 0, 0, 0, 0.490196 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="wait"]
position = Vector2( 640, 360 )
scale = Vector2( 4, 4.09375 )
frames = SubResource( 9 )
playing = true

[node name="Label" type="Label" parent="wait"]
margin_left = 567.0
margin_top = 447.0
margin_right = 712.0
margin_bottom = 467.0
custom_fonts/font = SubResource( 10 )
text = "Oyun y√ºkleniyor..."

[connection signal="pressed" from="PlayGame" to="." method="_on_PlayGame_pressed"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
